<resources>
    <string name="app_name">My Application</string>
    <string name="todo1">TODO</string>
    <string name="welcom">No Matter where you are: Home,Work…,We will finde    you and feed you.</string>
    <string name="wellcome_to_burger_house_app_delevery">WELLCOME TO BURGER HOUSE APP DELEVERY</string>
    <string name="yyy">WELCOME</string>
    <string name="to_our_app">TO OUR APP</string>
    <string name="use_our_app_and_make_your_request_easyer_and_faster">use our app and make your request easyer and faster .</string>
    <string name="login">Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="username">username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="login1">Login??</string>
    <string name="dear_user_pleas_follow_the_steps_and_put_all_your_information_to_register_you">Dear user ,pleas follow the steps and put all your information to register you.</string>
    <string name="todo2">TODO</string>
    <string name="please_enter_your_phone_number_correctly">please enter your phone number correctly .</string>
    <string name="please_enter_your_phone_number_correctly_then_a_confirmation_code_will_send_to_you">Please Enter your phone number correctly,then a confirmation code will be send to you .</string>
    <string name="phone_number">Phone number</string>
    <string name="LOGIN">LOGIN</string>
    <string name="if_your_alredy_signed_up_brfore_just_put_your_phone_and_your_email_pasword">if you are  already signed up,just put your phone and your pasword.</string>
    <string name="new_user_sign_up">New user!!Sign up?</string>
    <string name="code">CODE</string>
    <string name="verification">verification</string>
    <string name="enter_pasword_sent_to">Enter pasword sent to</string>
    <string name="virification_code">virification code</string>
    <string name="verify_code">verify code</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="title_activity_food_category">food_category</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_food_list">food_list</string>
    <string name="s" />
    <string name="title_activity_show_food">show_food</string>
    <string name="l">L </string>
    <string name="xl">XL</string>
    <string name="xxl">XXL</string>
    <string name="select_size">Size:</string>
    <string name="test">test</string>
    <string name="quantity">Quantity:</string>
    <string name="add">ADD</string>
    <string name="title_activity_requst_list">request_list</string>
    <string name="request">request</string>
    <string name="price">Price: </string>
    <string name="daa">0 DA</string>
    <string name="get_your_adrresse">Get your adrresse</string>
    <string name="_1_open_your_googl_maps_and_turn_on_you_gps">1).Open your googl maps and turn on you Gps.</string>
    <string name="_2_click_here_to_se_you_location">2).Hold your finger here to mark your location.</string>
    <string name="_3_copy_your_addresse">3).Copy your addresse .</string>
    <string name="copy_your_adress">3).Copy your adress.</string>
    <string name="_4_past_your_addresse_here_and_click_request">3).Copy this addresse and past it.</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="placed">Placed</string>
    <string name="phone">Phone</string>
    <string name="address">address: </string>
    <string name="phoneee">phone: </string>
    <string name="iiiii">total: </string>
</resources>